7.jun (ws)
      - "x" (flip) flips the up/down position of a note augmentation dot
        (if note y position is on a staff line)
      - align augmentation dots vertically also for different voices
      - fix #10988: Cannot change 4/4 to 2/2
      (la)
      - add support for OSC #bundle
      - fix support for float in OSC
      - add oscChannelVolume, pan and mute
6.jun (ws)
      - fix #10607: Copy n' Paste of notes 'forgets' some rests
        (patch from Miwarre)
      - fix #10979: invisible text has wrong colour (patch from Miwarre)
      - fix #10970: Select All non-functional
      (la)
      - fix #9107: Pasting multiple multi-voice notes causes crash
      - remove delete button in symboldialog, fix system flag
4.jun (ws)
      - chord layout: avoid collision between hook and augmentation dot
      - fix regression: delete instrument name
      - added code from mobile development: libmscore qt mxml
3.jun (ws)
      - fix #10937
02.jun (la)
      - fix #10915: Rename WRC to WRC.BAT in CMakeList.txt
01.jun (la)
      - fix shortcut for navigating score on windows because of
        http://bugreports.qt.nokia.com/browse/QTBUG-15746
31.may (ws)
      - don't shorten stem len if chord has hooks
      - fix for ties between notes of different voice
      - added "Schleifer" articulation
29.may (ws)
      - some berlin music hackday hacks
26.may (ws)
      - fix #10490: Endless loop on entering (some) lyrics underscore (patch from Miwarre)
25.may (ws)
      - fix #10805: Extra rests in measure when entering (some) notes
23.may (ws)
      - selecting a chord stem and press "add tie +" ties the whole chord
      - add tie "+" can be applied to several selected notes at once
      - fix #4526: Adding ties to chords
22.may (ws)
      - add "join score" function to album
20.may (la)
      - Add import of Score Writer *.scw files + testsuite (patch by Rui Fan)
19.may (ws)
      - fix #10710: factory reset
      - add default style preference for parts